Sprint 5 terminado todo lo obligatorio

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 
   <!-- etiquetas meta e iconos y font -->
 
-  <%- include("./partials/head-no-css") %>
+  <%- include("partials/head-no-css") %>
 
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/theme.css" />
@@ -19,8 +19,8 @@
 
 <body>
 
-  <%- include("./partials/header") %>
-    <%- include("./partials/nav-bar") %>
+  <%- include("partials/header") %>
+    <%- include("partials/nav-bar") %>
 
       <main>
         <div class="all-index">
@@ -41,16 +41,16 @@
                 Profesionales</button></a>
           </div>
           <h3 class="title-categories">Categorias mas Solicitadas</h3>
-          <%- include("./partials/categories-examples") %>
+          <%- include("partials/categories-examples") %>
 
 
-            <%- include("./partials/ad-bottom-body") %>
+            <%- include("partials/ad-bottom-body") %>
 
         </div>
       </main>
 
       <!-- footer -->
-      <%- include("./partials/footer") %>
+      <%- include("partials/footer") %>
 </body>
 
 </html>
