--- a/views/productCart.ejs
+++ b/views/productCart.ejs
@@ -3,7 +3,7 @@
 
 <head>
 
-  <%- include("./partials/head-no-css") %>
+  <%- include("partials/head-no-css") %>
 
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/theme.css" />
@@ -19,8 +19,8 @@
 
 <body>
 
-  <%- include("./partials/header") %>
-    <%- include("./partials/nav-bar") %>
+  <%- include("partials/header") %>
+    <%- include("partials/nav-bar") %>
 
       <main>
         <p class="title-cart">Reservas por Confirmar</p>
@@ -143,11 +143,11 @@
           </button>
         </div>
 
-        <%- include("./partials/ad-bottom-body") %>
+        <%- include("partials/ad-bottom-body") %>
 
       </main>
 
-      <%- include("./partials/footer") %>
+      <%- include("partials/footer") %>
 
 </body>
 
