--- a/views/rubros.ejs
+++ b/views/rubros.ejs
@@ -3,7 +3,7 @@
 
 <head>
 
-  <%- include("./partials/head-no-css") %>
+  <%- include("partials/head-no-css") %>
 
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/theme.css" />
@@ -17,8 +17,8 @@
 
 <body>
 
-  <%- include("./partials/header") %>
-    <%- include("./partials/nav-bar") %>
+  <%- include("partials/header") %>
+    <%- include("partials/nav-bar") %>
 
       <main>
         <p class="title-rubros">Todos Nuestros Profesionales de:</p>
@@ -169,11 +169,11 @@
           </section>
         </div>
 
-        <%- include("./partials/ad-bottom-body") %>
+        <%- include("partials/ad-bottom-body") %>
 
       </main>
 
-      <%- include("./partials/footer") %>
+      <%- include("partials/footer") %>
 
 </body>
 
