--- a/views/users/registerClients.ejs
+++ b/views/users/registerClients.ejs
@@ -22,13 +22,13 @@
       <main>
         <form action="/clients/registerClients" method="POST" enctype="multipart/form-data" class="clientForm">
           <div class="registerInput">
-            <label for="first-name">Nombre:
-              <input type="text" name="first-name" id="first-nombre" placeholder="Ej: Cosme">
+            <label for="firstName">Nombre:
+              <input type="text" name="firstName" id="firstNombre" placeholder="Ej: Cosme">
             </label>
           </div>
           <div class="registerInput">
-            <label for="last-name">Apellido:
-              <input type="text" name="last-name" id="last-name" placeholder="Ej: Fulanito">
+            <label for="lastName">Apellido:
+              <input type="text" name="lastName" id="lastName" placeholder="Ej: Fulanito">
             </label>
           </div>
           <div class="registerInput">
