--- a/views/professionals/professionalDetail.ejs
+++ b/views/professionals/professionalDetail.ejs
@@ -18,204 +18,183 @@
 <body>
 
   <%- include("../partials/header") %>
+    <%- include("../partials/nav-bar") %>
 
-    <nav class="nav-login">
-      <section class="categories">
-        <div class="login">
-          <a href="../../rubros">
-            <p>RUBROS </p>
-          </a>
-        </div>
-        <div class="prof-zona">
-          <p>Prof. por Zona <i class="fas fa-hard-hat"></i></p>
-          <!-- ocultar boton en mobile, mostrar en el resto -->
-        </div>
-      </section>
-      <div class="login">
-        <a href="../../login">
-          <p class="txt-ingresar">Ingresar</p>
-        </a>
-        <div>
-          <p><i class="fas fa-user"></i> <i class="fas fa-chevron-down"></i></p>
 
-          <!-- ocultar txt en mobile, mostrar en el resto -->
-        </div>
 
-        <div class="cart">
-          <a href="../../productCart"><i class="fas fa-shopping-cart"></i></a>
-          <i class="fas fa-chevron-down"></i>
-        </div>
-      </div>
-    </nav>
+      <main>
+        <div class="allProduct">
+          <div class="prof-title-father">
+            <p class="title-per-device-productDetail">
+              <%=profObject[0].jobTitle %>
 
-    <main>
-      <div class="allProduct">
-        <div class="prof-title-father">
-          <p class="title-per-device-productDetail">
-            <%=profObject[0].jobTitle %>
-
-          </p>
-          <p class="name-per-device-productDetail">
-            <%= profObject[0].firstName + " " + profObject[0].lastName %>
-          </p>
-          <!--el nombre cambia segun el profesonial  -->
-        </div>
-        <div class="columns-productDetail-father">
-          <div class="column12-productDetail">
-
-            <div class="top-flex-mobile">
-              <div class="prof-avatar">
-                <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
-              </div>
-
-              <div class="rating-father">
-                <div class="rating-star">
-                  <div class="empty-star">
-                    <span>Resultado</span>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                  </div>
-                  <div class="full-star">
-                    <span>Precio</span>
-                    <i class="fas fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                  </div>
-                  <div class="half-star">
-                    <span>Rapidez</span>
-                    <i class="fas fa-star-half-alt"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                    <i class="far fa-star"></i>
-                  </div>
-                </div>
-                <p class="average-phrase">Promedio entre: n Opiniones</p>
-              </div>
-            </div>
-            <div class="buttons-below-avatar">
-              <div>
-                <p>Disponibilidad:</p>
-                <input type="date" id="date">
-              </div>
-              <button type="submit" style="width: 25vw;">
-                Agregar Servicio
-              </button>
-            </div>
+            </p>
+            <p class="name-per-device-productDetail">
+              <%= profObject[0].firstName + " " + profObject[0].lastName %>
+            </p>
+            <!--el nombre cambia segun el profesonial  -->
           </div>
-          <div class="column22-productDetail">
-            <p class="title-prof-name">Detalles</p>
+          <div class="columns-productDetail-father">
+            <div class="column12-productDetail">
 
-            <div class=" details">
-              <div>
-                <p>Zona:<%=" " +profObject[0].jobZone %>
+              <div class="top-flex-mobile">
+                <div class="prof-avatar">
+                  <!-- Foto cargada por el prof (.jpg, .png, .bmp) -->
+                </div>
+
+                <div class="rating-father">
+                  <div class="rating-star">
+                    <div class="empty-star">
+                      <span>Resultado</span>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                    </div>
+                    <div class="full-star">
+                      <span>Precio</span>
+                      <i class="fas fa-star"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                    </div>
+                    <div class="half-star">
+                      <span>Rapidez</span>
+                      <i class="fas fa-star-half-alt"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                      <i class="far fa-star"></i>
+                    </div>
+                  </div>
+                  <p class="average-phrase">Promedio entre: n Opiniones</p>
+                </div>
+              </div>
+              <div class="buttons-below-avatar">
+                <div>
+                  <p>Disponibilidad:</p>
+                  <input type="date" id="date">
+                </div>
+                <button type="submit" style="width: 25vw;">
+                  Agregar Servicio
+                </button>
+              </div>
+            </div>
+            <div class="column22-productDetail">
+              <p class="title-prof-name">Detalles</p>
+
+              <div class=" details">
+                <div>
+                  <p>Zona:<%=" " +profObject[0].jobZone %>
                   </p>
                   <p>Matricula:<%if(profObject[0].license){%>
                       <%=" " +profObject[0].license %> 
                   <%}else{ %>
                     <%=" No Posee" %>
-                    <% } %>
-                </p>
-                <p>Atiende Emergencias: <% if(profObject[0].emergency=="Si" ){ %>
-                    Si
-                    <% }else{ %>
-                      No
                       <% } %>
-                </p>
-                <p>Precio de Reserva: $<%=profObject[0].price %>
-                </p>
+                  </p>
+                  <p>Atiende Emergencias: <% if(profObject[0].emergency=="Si" ){ %>
+                      Si
+                      <% }else{ %>
+                        No
+                        <% } %>
+                  </p>
+                  <p>Precio de Reserva: $<%=profObject[0].price %>
+                  </p>
+                </div>
               </div>
+
             </div>
 
           </div>
-
-        </div>
-        <div class=" prof-detail-text">
-          <p class="prof-detail-title-text">Razones por cuales elegirme:</p>
-          <p class="prof-txt">
-            <%=profObject[0].whyMe %>
-          </p>
-        </div>
-        <div class=" prof-detail-text">
-          <p class="prof-detail-title-text">Fotos de mis Trabajos Realizados:</p>
-          <p class="prof-txt">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus repellat dolor quo inventore expedita
-            aperiam quae dicta totam nihil delectus eveniet, beatae dignissimos architecto a dolorum, deleniti, non quia
-            corrupti?
-          </p>
-        </div>
-        <div class="buttons-below-avatar">
-          <div>
-            <a href="/rubros/<%=profObject[0].jobTitle %>/<%=profObject[0].cuit %>/editProf">
-              <button type="submit" style="width: 25vw;">Editar Perfil</button>
-            </a>
+          <div class=" prof-detail-text">
+            <p class="prof-detail-title-text">Razones por cuales elegirme:</p>
+            <p class="prof-txt">
+              <%=profObject[0].whyMe %>
+            </p>
           </div>
-          <a href="/rubros/<%= profObject[0].jobTitle %>/<%= profObject[0].cuit %>/deleteProf">
-            <button type="submit" style="width: 25vw;">Eliminar Perfil</button>
-          </a>
+          <div class=" prof-detail-text">
+            <p class="prof-detail-title-text">Fotos de mis Trabajos Realizados:</p>
+            <p class="prof-txt">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus repellat dolor quo inventore expedita
+              aperiam quae dicta totam nihil delectus eveniet, beatae dignissimos architecto a dolorum, deleniti, non
+              quia
+              corrupti?
+            </p>
+          </div>
+          <% if(user!=undefined){ %>
+            <% if(user.cuit==profObject[0].cuit){ %>
+              <div class="buttons-below-avatar">
+                <div>
+                  <a href="/rubros/<%=profObject[0].jobTitle %>/<%=profObject[0].cuit %>/editProf">
+                    <button type="submit" style="width: 25vw;">Editar Perfil</button>
+                  </a>
+                </div>
+                <a href="/rubros/<%= profObject[0].jobTitle %>/<%= profObject[0].cuit %>/deleteProf">
+                  <button type="submit" style="width: 25vw;">Eliminar Perfil</button>
+                </a>
+              </div>
+              <%} %>
+                <%} %>
+
+                  <h3 class=" title-categories">Tambien te Puede Interesar</h3>
+                  <section class="icon-categories">
+                    <article class="icon-article">
+                      <!-- meter if en los links para /rubros/plomero o /dentista -->
+                      <a href="../Mecanico">
+                        <!-- mecanica auto 1-->
+                        <i class="fas fa-wrench"></i>
+                        <p class="icon-txt">Mecanicos/as</p>
+                      </a>
+                    </article>
+                    <article class="icon-article">
+                      <a href="../Electricista">
+                        <!-- electricista 2-->
+                        <i class="fas fa-plug"></i>
+                        <p class="icon-txt">Electricistas</p>
+                      </a>
+                    </article>
+                    <article class="icon-article">
+                      <a href="../Odontologo">
+                        <!-- dentistas 3-->
+                        <i class="fas fa-tooth"></i>
+                        <p class="icon-txt">Odontologos/as</p>
+                      </a>
+                    </article>
+
+                    <article class="icon-article">
+                      <a href="../Plomero">
+                        <!-- plomeria 4-->
+                        <i class="fas fa-faucet"></i>
+                        <p class="icon-txt">Plomeros/as</p>
+                      </a>
+                    </article>
+
+                    <article class="icon-article">
+                      <a href="../Carpintero">
+                        <!-- carpinteria 5-->
+                        <i class="fas fa-hammer"></i>
+                        <p class="icon-txt">Carpinteros/as/
+                          <p>
+                      </a>
+                    </article>
+                    <article class="icon-article">
+                      <a href="../Pintor">
+                        <!-- pintores 6-->
+                        <i class="fas fa-paint-roller"></i>
+                        <p class="icon-txt">Pintores/as</p>
+                      </a>
+                    </article>
+                  </section>
+
+                  <%- include("../partials/ad-bottom-body") %>
+
         </div>
+      </main>
 
-        <h3 class=" title-categories">Tambien te Puede Interesar</h3>
-        <section class="icon-categories">
-          <article class="icon-article">
-            <!-- meter if en los links para /rubros/plomero o /dentista -->
-            <a href="../Mecanico">
-              <!-- mecanica auto 1-->
-              <i class="fas fa-wrench"></i>
-              <p class="icon-txt">Mecanicos/as</p>
-            </a>
-          </article>
-          <article class="icon-article">
-            <a href="../Electricista">
-              <!-- electricista 2-->
-              <i class="fas fa-plug"></i>
-              <p class="icon-txt">Electricistas</p>
-            </a>
-          </article>
-          <article class="icon-article">
-            <a href="../Odontologo">
-              <!-- dentistas 3-->
-              <i class="fas fa-tooth"></i>
-              <p class="icon-txt">Odontologos/as</p>
-            </a>
-          </article>
-
-          <article class="icon-article">
-            <a href="../Plomero">
-              <!-- plomeria 4-->
-              <i class="fas fa-faucet"></i>
-              <p class="icon-txt">Plomeros/as</p>
-            </a>
-          </article>
-
-          <article class="icon-article">
-            <a href="../Carpintero">
-              <!-- carpinteria 5-->
-              <i class="fas fa-hammer"></i>
-              <p class="icon-txt">Carpinteros/as/
-                <p>
-            </a>
-          </article>
-          <article class="icon-article">
-            <a href="../Pintor">
-              <!-- pintores 6-->
-              <i class="fas fa-paint-roller"></i>
-              <p class="icon-txt">Pintores/as</p>
-            </a>
-          </article>
-        </section>
-
-        <%- include("../partials/ad-bottom-body") %>
-
-      </div>
-    </main>
-
-    <%- include("../partials/footer") %>
+      <%- include("../partials/footer") %>
 
 </body>
 
